fixed sidebar z-index

--- a/sass/layouts/_global.scss
+++ b/sass/layouts/_global.scss
@@ -183,12 +183,14 @@ body {
         z-index: 0;
         left: 0;
         top: 0;
-        width: 100%; 
+        width: 0%; 
         height: 100%; 
         overflow: auto; 
+        z-index: 2;
 
         @include breakpoint(sm) {
             visibility: hidden;
+            width: 100%;
             z-index: -1;
             background-color: rgba(0, 0, 0, 0.49);
           }
@@ -210,7 +212,8 @@ body {
         height: 100%;
         color: $darkwashedblue;
         width: 300px;
-        z-index: 2;
+        
+        background-color: $white;
 
         @include breakpoint(sm) {
             width: 60%;
