--- a/style.css
+++ b/style.css
@@ -5505,14 +5505,16 @@ body {
   z-index: 0;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 0%;
   height: 100%;
   overflow: auto;
+  z-index: 2;
 }
 
 @media (max-width: 600px) {
   .site-main--aside .site-aside-container {
     visibility: hidden;
+    width: 100%;
     z-index: -1;
     background-color: rgba(0, 0, 0, 0.49);
   }
@@ -5534,7 +5536,7 @@ body {
   height: 100%;
   color: #3b415b;
   width: 300px;
-  z-index: 2;
+  background-color: #fff;
 }
 
 @media (max-width: 600px) {
